improved revision  - camera switcher visible by default  - fixes issue with display:fixed not scaling the video

--- a/bblf-enhancer.css
+++ b/bblf-enhancer.css
@@ -1,35 +1,17 @@
-/* hide header/footer */
-header, footer {
-  display: none;
-}
 
-/* adjust container for thumb cams and date/time */
-/* make bottom -8em to show just camera labels, or use display: none to hide it */
+/* you can uncomment display:none or remove this to hide cam switcher */
 .skin-multi-cam-plugin {
-  display: none !important;
-  width: 420px;
-  height: 160px !important;
-  min-height: unset !important;
-  position: fixed;
-  top: unset !important;
-  right: 1em !important;
-  bottom: -8em !important;
-  left: unset !important;
+  /* display: none; */
 }
 
-/* full video */
-#mcplayer, .aa-player-skin {
-  position: fixed !important;
-  margin: 0 !important;
-  top: 0 !important;
-  left: 0 !important;
-  width: 100% !important;
-  height: 100% !important;
-}
-
-/* hide chat */
+/* you can comment display:none or remove this to show sidebar/chat */
 .skin-multi-cam-plugin-sub-sections-elements {
   display: none;
+}
+
+/* you can uncomment display:none to hide video overlay controls */
+.metadata-manager, .skin-metadata-manager-content, .rating-manager, .product-placement-manager, .controls-backplane, .skip-button-wrapper, .controls-brand-logo-wrapper, .controls-manager, .gate-manager, .ad-info-manager, .tool-tip-manager, .modal-manager, .top-menu-backplane, .top-menu-manager {
+  /* display: none; */
 }
 
 /* hide disclaimer */
@@ -37,14 +19,57 @@ header, footer {
   display: none !important;
 }
 
-/* hide overlays */
-.metadata-manager, .skin-metadata-manager-content, .rating-manager, .product-placement-manager, .controls-backplane, .skip-button-wrapper, .controls-brand-logo-wrapper, .controls-manager, .gate-manager, .ad-info-manager, .tool-tip-manager, .modal-manager, .top-menu-backplane, .top-menu-manager {
-  /* display: none; */
-}
-
-/* Might need to deal with a live timeout manager */
 /* .live-timeout-manager {} */
 
 [data-role="adContainer"], [data-role="adClickEl"] {
   display: none;
 }
+
+/* various format page */
+html, body {
+  margin-top: 0;
+  min-height: unset;
+  height: 100%;
+}
+
+header, footer {
+  display: none;
+}
+
+main {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: unset;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+}
+
+#mcplayer {
+  position: relative;
+  min-width: unset;
+  min-height: unset;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+}
+
+.player-services-smart-tag-content-element {
+  display: flex;
+  flex-direction: column;
+}
+
+.aa-player-skin.multi-cam-plugin-skin-shift {
+  width: 100%;
+  height: 100%;
+}
+
+.skin-multi-cam-plugin {
+  
+  width: 50%;
+  left: 25%;
+}
+
